crates/rpdf-parser/tests/regression/snapshots/lib__regression__x1_special_acroform_calc.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 164
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 1
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 200
        - 200
      rotation: 0
      op_count: 5
