crates/rpdf-parser/tests/regression/snapshots/lib__regression__x2_special_irs_f4868.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 165
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 4
  metadata:
    title: 2025 Form 4868
    author: "C:DC:TS:CAR:MP"
    producer: Designer 6.5
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 1501
    - index: 1
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 337
    - index: 2
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 525
    - index: 3
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 653
