crates/rpdf-parser/tests/regression/snapshots/lib__regression__x3_special_irs_f1099msc.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 166
expression: parse_to_snapshot(& bytes)
---
doc:
  page_count: 6
  metadata:
    title: Form 1099-MISC (Rev. April 2025)
    author: "C:DC:TS:CAR:MP"
    producer: Designer 6.5
  pages:
    - index: 0
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 190
    - index: 1
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 1803
    - index: 2
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 1386
    - index: 3
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 1448
    - index: 4
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 331
    - index: 5
      media_box:
        - 0
        - 0
        - 612
        - 792
      rotation: 0
      op_count: 1422
