crates/rpdf-parser/tests/regression/snapshots/lib__regression__x4_special_unicode_en_cidfont.snap
---
source: crates/rpdf-parser/tests/regression/mod.rs
assertion_line: 167
expression: parse_to_snapshot(& bytes)
---
error: "MalformedStream { offset: 64, reason: \"/Length is an indirect reference (not yet supported; Task #7)\" }"
